# Ouija

./: README.md  pyproject.toml
ouija/: ouija.py
